--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/jspdf": "^1.3.3",
+    "@types/puppeteer": "^5.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
+    "markdown-to-txt": "^2.0.1",
     "marked": "^15.0.12",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
